--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,6 @@ project:
   type: book
   output-dir: docs
 
-
 book:
   title: "LIVING forskningsprojekt"
   author: "Jonas Munk Jensen"
@@ -33,3 +32,7 @@ format:
   html:
     theme: cosmo
     default-image-extension: svg
+  pdf:
+    documentclass: scrbook
+    default-image-extension: png
+
