--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,40 +1,62 @@
 project:
-  type: book
-  output-dir: docs
+  type: website
 
-book:
+website:
+  page-navigation: true
   title: "LIVING forskningsprojekt"
+  site-url: "https://jonasmunkjensen.github.io/LIVING/"
+  repo-url: "https://jonasmunkjensen.github.io/LIVING/"
+
   author: "Jonas Munk Jensen"
   date: 2024 07 31
   date-format: "YYYY"
-  site-url: https://github.com/Jonasmunkjensen/LIVING
-  repo-url: https://github.com/Jonasmunkjensen/LIVING
-  chapters:
-    - index.qmd
-    - 0-introduktion.qmd
-    - 1-afklarende-samtale.qmd
-    - 2-testmanual.qmd
-    - 3-REDCap.qmd
-    - 4-opsætning-af-aktivitetsmåler.qmd
-    - 5-HbA1c-apparat.qmd
-  appendices:
-    - 6-Samtykkeerklæring.qmd
-    - 7-udstyrsliste.qmd
-cookie-consent:
-  type: express
-  palette: light
-google-analytics:
-  tracking-id: "G-98HE1VGDR4"
 
-execute:
-  freeze: auto
-  echo: false # change to false to hide code
+  page-footer:
+    right: "Denne hjemmeside er lavet i [Quarto](https://quarto.org/)."
+
+  sidebar:
+    background:light
+    logo: figures/rmlogo.PNG
+    favicon: images/favicon.ico
+    pinned: true
+    align: center
+    tools:
+      - icon: github
+        href: https://github.com/Jonasmunkjensen/LIVING
+        text: "LIVING"
+
+    style: "docked"
+    search: true
+    collapse-level: 1
+    contents:
+      - href: index.qmd
+        text: Forside
+      - href: 0-introduktion.qmd
+        text: Introduktion
+      - href: afklarende-samtale.qmd
+        text: 2-testmanual.qmd
+      - href: 3-REDCap.qmd
+        text: REDCap
+      - href: 4-opsætning-af-aktivitetsmåler.qmd
+        text: Klargøring af aktivitetsmålere
+      - href: 5-HbA1c-apparat.qmd
+        text: Procedurer for HbA1c apparat
+      - href: 6-Samtykkeerklæring.qmd
+        text: Samtykkeerklæringer til print
+      - href: 7-udstyrsliste.qmd
+      - text: 7-udstyrsliste.qmd
 
 format:
   html:
-    theme: cosmo
-    default-image-extension: svg
-  pdf:
-    documentclass: scrbook
-    default-image-extension: png
+    theme:
+      light: [cosmo, theme.scss]
+      dark: [cosmo, theme-dark.scss]
+    code-copy: true
+    code-overflow: wrap
+    toc: true
+
+filters:
+  - include-files.lua
+  - quarto
+
 
